--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -280,4 +280,105 @@
       </g>
     </g>
   </symbol>
+  <symbol id="ost-api-sdk-logo" viewBox="0 0 152 40">
+    <g fill="none" fill-rule="evenodd">
+      <path d="M65.416 29.448l-1.32-3.6H57.16l-1.296 3.6H52l6.864-16.992h3.624l6.792 16.992h-3.864zm-7.296-6.216h5.016l-1.464-4.008a27.02 27.02 0 0 1-1.008-3.408h-.096a27.02 27.02 0 0 1-1.008 3.408l-1.44 4.008zm13.888 6.216V12.456h5.496c4.128 0 6.216 1.848 6.216 5.328 0 3.288-2.136 5.232-5.904 5.232h-2.4v6.432h-3.408zm3.408-9.168h1.776c2.208 0 3.216-.792 3.216-2.496 0-1.8-1.032-2.544-3.216-2.544h-1.776v5.04zm11.896-7.824h3.36v16.992h-3.36V12.456zm21.08 17.448c-2.736 0-4.824-1.104-6.264-3.528l2.328-1.632.432.12c.912 1.512 1.992 2.16 3.48 2.16 1.512 0 2.544-.912 2.544-2.064 0-1.152-.648-1.872-3.6-3.12-3.336-1.392-4.536-2.88-4.536-5.232 0-2.592 2.256-4.608 5.664-4.608 2.52 0 4.416 1.056 5.592 2.88l-2.304 1.68-.432-.096c-.672-1.008-1.56-1.608-2.856-1.608-1.392 0-2.184.72-2.184 1.728 0 .936.48 1.464 3.504 2.784 3.552 1.584 4.632 3.072 4.632 5.352 0 2.904-2.496 5.184-6 5.184zm9.832-.456V12.456h5.232c6.264 0 9.72 3.096 9.72 8.424 0 5.376-3.648 8.568-9.744 8.568h-5.208zm3.36-3.024h1.608c4.392 0 6.504-1.728 6.504-5.568 0-3.696-2.064-5.376-6.456-5.376h-1.656v10.944zm26.032 3.024l-4.752-7.152-2.376 2.64v4.512h-3.36V12.456h3.36v2.952c0 1.728-.048 3.72-.12 5.448h.048a81.05 81.05 0 0 1 3.144-3.84l3.792-4.56h4.056l-6.288 7.248 6.552 9.744h-4.056z" fill="#597A84"/>
+      <g fill-rule="nonzero">
+        <path d="M16.727 23.6l-5.85-5.792-2.287 2.26a7.94 7.94 0 0 0-1.45 9.356c.13.243.273.48.428.708L.877 36.756a1.592 1.592 0 0 0 0 2.264c.048.043.1.083.153.12l7.964-7.884 7.733-7.656z" fill="#72A8C2"/>
+        <path d="M16.727 23.6l5.85 5.788-2.286 2.264a8.142 8.142 0 0 1-9.45 1.436 7.58 7.58 0 0 1-.716-.4l-6.69 6.6a1.628 1.628 0 0 1-2.283 0 1.107 1.107 0 0 1-.126-.148l7.964-7.884h.02l7.717-7.656z" fill="#438BAD"/>
+        <path d="M18.275 16.72a1.22 1.22 0 0 0-1.697 0L13.13 20.1l1.713 1.696 3.43-3.396a1.191 1.191 0 0 0 0-1.68M23.434 21.812a1.22 1.22 0 0 0-1.697 0L18.275 25.2l1.713 1.696 3.446-3.404a1.191 1.191 0 0 0 0-1.68" fill="#737E8E"/>
+        <path d="M23.434 16.56l5.85 5.792 2.288-2.264a7.94 7.94 0 0 0 1.45-9.356 6.746 6.746 0 0 0-.428-.708l6.69-6.624c.63-.625.63-1.635 0-2.26a1.113 1.113 0 0 0-.149-.124L31.172 8.9l-.025.02-7.713 7.64z" fill="#438BAD"/>
+        <path d="M23.434 16.56l-5.846-5.792 2.283-2.264a8.142 8.142 0 0 1 9.45-1.436c.246.129.485.27.715.424L36.727.868a1.624 1.624 0 0 1 2.287 0c.045.048.08.1.121.152l-7.963 7.884h-.02l-7.718 7.656z" fill="#72A8C2"/>
+      </g>
+    </g>
+  </symbol>
+  <symbol id="ost-guides-logo" viewBox="0 0 155 42">
+    <g fill="none" fill-rule="evenodd">
+      <g fill-rule="nonzero">
+        <path d="M0 6.34v32.49C0 40.58 1.41 42 3.148 42h41.704C46.591 42 48 40.58 48 38.83V6.34H0z" fill="#597A84"/>
+        <path fill="#728E96" d="M0 6.34V37.3L33.104 6.34z"/>
+        <path d="M48 3.17v3.17H0V3.17C0 1.42 1.41 0 3.148 0h41.704C46.591 0 48 1.42 48 3.17" fill="#F2F7F7"/>
+        <path d="M6.295 3.17a1.58 1.58 0 0 1-1.574 1.585A1.58 1.58 0 0 1 3.148 3.17 1.58 1.58 0 0 1 4.72 1.585c.87 0 1.574.71 1.574 1.585" fill="#FA5655"/>
+        <path d="M12.59 3.17a1.58 1.58 0 0 1-1.574 1.585A1.58 1.58 0 0 1 9.443 3.17a1.58 1.58 0 0 1 1.573-1.585c.87 0 1.574.71 1.574 1.585" fill="#F3B607"/>
+        <path d="M18.885 3.17a1.58 1.58 0 0 1-1.574 1.585 1.58 1.58 0 0 1-1.573-1.585 1.58 1.58 0 0 1 1.573-1.585c.87 0 1.574.71 1.574 1.585" fill="#4EB178"/>
+        <path d="M25.967 25.358c0 5.252-4.227 9.51-9.442 9.51s-9.443-4.258-9.443-9.51c0-5.251 4.228-9.509 9.443-9.509a9.41 9.41 0 0 1 6.677 2.785 9.544 9.544 0 0 1 2.765 6.724" fill="#FBD764"/>
+        <path d="M25.967 25.358c.025 4.572-3.184 8.514-7.64 9.386-4.457.873-8.898-1.572-10.576-5.82l17.43-7.314a9.567 9.567 0 0 1 .786 3.748" fill="#84D1D4"/>
+        <path d="M25.967 25.414a9.526 9.526 0 0 1-4.328 8l-5.114-8.107 8.679-3.641a9.567 9.567 0 0 1 .763 3.748" fill="#438BAD"/><path d="M25.18 21.61l-8.655 3.645V15.85a9.461 9.461 0 0 1 8.655 5.761" fill="#FF5F5A"/>
+        <path d="M33.05 28.528a1.58 1.58 0 0 1-1.575 1.585 1.58 1.58 0 0 1-1.573-1.585 1.58 1.58 0 0 1 1.573-1.585c.87 0 1.574.71 1.574 1.585M36.197 27.736h6.295v1.585h-6.295zM33.05 20.604a1.58 1.58 0 0 1-1.575 1.585 1.58 1.58 0 0 1-1.573-1.585 1.58 1.58 0 0 1 1.573-1.585c.87 0 1.574.71 1.574 1.585M36.197 19.811h6.295v1.585h-6.295z" fill="#D3E3E5"/>
+      </g>
+      <path d="M69.448 31.904c-4.896 0-8.448-3.672-8.448-8.88C61 17.696 64.888 14 70.024 14c3.504 0 6.192 1.416 7.824 4.272l-2.52 1.608-.408-.096c-1.152-1.8-2.592-2.616-4.776-2.616-3.168 0-5.496 2.4-5.496 5.856 0 3.36 2.208 5.808 5.352 5.808 2.568 0 4.704-1.272 4.944-3.792v-.096h-4.152v-2.616h7.248v9.12h-3.048v-.792c0-.624.12-1.176.288-1.68l-.048-.024c-1.296 2.04-3.264 2.952-5.784 2.952zm20.032 0c-4.872 0-7.128-2.544-7.128-7.44V14.456h3.36v9.72c0 3.264 1.152 4.584 3.768 4.584 2.616 0 3.744-1.32 3.744-4.608v-9.696h3.36v10.008c0 4.752-2.376 7.44-7.104 7.44zm11.68-17.448h3.36v16.992h-3.36V14.456zm8.08 16.992V14.456h5.232c6.264 0 9.72 3.096 9.72 8.424 0 5.376-3.648 8.568-9.744 8.568h-5.208zm3.36-3.024h1.608c4.392 0 6.504-1.728 6.504-5.568 0-3.696-2.064-5.376-6.456-5.376H112.6v10.944zm15.544-13.968h10.296l.336 2.904h-7.272v4.032h6.6V24.2h-6.6v4.344h7.272l-.336 2.904h-10.296V14.456zm20.008 17.448c-2.736 0-4.824-1.104-6.264-3.528l2.328-1.632.432.12c.912 1.512 1.992 2.16 3.48 2.16 1.512 0 2.544-.912 2.544-2.064 0-1.152-.648-1.872-3.6-3.12-3.336-1.392-4.536-2.88-4.536-5.232 0-2.592 2.256-4.608 5.664-4.608 2.52 0 4.416 1.056 5.592 2.88l-2.304 1.68-.432-.096c-.672-1.008-1.56-1.608-2.856-1.608-1.392 0-2.184.72-2.184 1.728 0 .936.48 1.464 3.504 2.784 3.552 1.584 4.632 3.072 4.632 5.352 0 2.904-2.496 5.184-6 5.184z" fill="#597A84"/>
+    </g>
+  </symbol>
+  <symbol id="ost-block-chain-infra-mosaic-logo" viewBox="0 0 250 288.59">
+    <g style="isolation:isolate">
+      <g id="Layer_2" data-name="Layer 2">
+        <g class="cls-3" id="Layer_1-2" data-name="Layer 1">
+          <path d="M187.51 180.38v-72.15l-.01-.01-62.48 36.07 62.49 36.09z" fill="#ff9f9c"/>
+          <path d="M125.02 144.29l-.03.02v72.16l62.52-36.09-62.49-36.09z" fill="#ff7f7b"/>
+          <path d="M187.51 180.37l62.48-36.07-62.48-36.07v72.14z" fill="#ff9f9c"/>
+          <path d="M187.51 180.37L250 216.45v-72.14l-.01-.01-62.48 36.07z" fill="#ff5f5a"/>
+          <path d="M187.51 180.38l-62.52 36.09v.01l62.51 36.09.01-.01v-72.18z" fill="#ff7f7b"/>
+          <path d="M187.51 252.56L250 216.48v-.03l-62.49-36.08v72.19z" fill="#ff5f5a"/>
+          <path d="M.03 144.31l62.49 36.08v-72.15l-.02-.01L.03 144.31z" fill="#ae90ae"/>
+          <path d="M0 144.32v72.16l62.52-36.09L.03 144.31l-.03.01z" fill="#936b93"/>
+          <path d="M125 144.31l-62.48-36.07v72.15L125 144.31z" fill="#ae90ae"/>
+          <path d="M125 144.31l-62.48 36.08 62.49 36.07v-72.14l-.01-.01z" fill="#784678"/>
+          <path d="M0 216.48v.01l62.5 36.09.02-.01v-72.18L0 216.48z" fill="#936b93"/>
+          <path d="M62.52 252.57l62.49-36.08v-.02l-62.49-36.08v72.18z" fill="#784678"/>
+          <path d="M124.98 216.4v-72.14l-.01-.01-62.48 36.07 62.49 36.08z" fill="#cde29e"/>
+          <path d="M62.49 180.32l-.03.01v72.17l62.52-36.1-62.49-36.08z" fill="#9ddadd"/>
+          <path d="M187.46 180.33l-62.48-36.07v72.14l62.48-36.07z" fill="#cde29e"/>
+          <path d="M187.46 180.33l-62.48 36.07 62.49 36.08v-72.15h-.01z" fill="#84d1d4"/>
+          <path d="M62.46 252.5v.01l62.51 36.08.01-.01V216.4l-62.52 36.1z" fill="#9ddadd"/>
+          <path d="M124.98 288.58l62.49-36.07v-.03l-62.49-36.08v72.18z" fill="#84d1d4"/>
+          <path d="M62.51 36.07l-.02.02v72.16l62.52-36.1-62.5-36.08z" fill="#e9c05a"/>
+          <path d="M62.51 36.07l62.5 36.08 62.48-36.07L125.01.01l-.02-.01-62.48 36.07z" fill="#e9c05a"/>
+          <path d="M187.49 36.08l-62.48 36.07 62.49 36.08V36.09l-.01-.01z" fill="#e4b030"/>
+          <path d="M125.01 72.15l-62.52 36.1v.01l62.5 36.09.02-.01V72.15z" fill="#e9c05a"/>
+          <path d="M125.01 144.34l62.49-36.08v-.03l-62.49-36.08v72.19z" fill="#e4b030"/>
+          <path d="M.03 72.16l62.49 36.09L125 72.17 62.52 36.1l-.02-.01L.03 72.16z" fill="#fde7a2"/>
+          <path d="M125 72.17l-62.48 36.08 62.49 36.07V72.18l-.01-.01z" fill="#fbd764"/>
+          <path d="M0 72.18v72.17l62.5 36.09.02-.01v-72.18L.03 72.16l-.03.02z" fill="#fce779"/>
+          <path d="M62.52 180.43l62.49-36.08v-.03l-62.49-36.08v72.19z" fill="#fbd764"/>
+          <path d="M124.99 72.16l-.02.02v72.16l62.52-36.09-62.5-36.09z" fill="#bdd87d"/>
+          <path d="M124.99 72.16l62.5 36.09 62.48-36.08-62.48-36.07-.02-.01-62.48 36.07z" fill="#cde29e"/>
+          <path d="M187.49 108.25l-62.52 36.09v.01l62.5 36.09.02-.01v-72.18z" fill="#bdd87d"/>
+          <path d="M187.49 108.25v72.18l62.48-36.08V72.17l-62.48 36.08z" fill="#accf5d"/>
+          <path d="M62.51 108.22l-.03.01v72.17L125 144.3l-62.49-36.08z" fill="#69a2bd"/>
+          <path d="M125 72.16l-.02-.01-62.47 36.07L125 144.3l62.48-36.07L125 72.16z" fill="#8eb9ce"/>
+          <path d="M187.48 108.23L125 144.3l62.49 36.08v-72.15h-.01z" fill="#438bad"/>
+          <path d="M125 144.3l-62.52 36.1v.01l62.5 36.09.02-.01V144.3z" fill="#69a2bd"/>
+          <path d="M125 216.49l62.49-36.08v-.03L125 144.3v72.19z" fill="#438bad"/>
+        </g>
+      </g>
+    </g>
+  </symbol>
+  <symbol id="ost-block-chain-infra-open-st-logo" viewBox="0 0 251.35 331.24">
+    <g id="Layer_2" data-name="Layer 2">
+      <g class="cls-2" id="Layer_1-2" data-name="Layer 1">
+        <path d="M196.6 156.01l-54.76 32.86-54.76-32.86 54.76-32.85 54.76 32.85zM141.84 243.62l54.76 32.86 54.75-32.86-54.75-35.21-54.76 35.21zM141.84 243.62l-54.76 32.86-54.76-32.86 54.76-35.21 54.76 35.21z" fill="#8eb9ce"/>
+        <path d="M87.08 276.48v54.76l54.76-35.22v-52.4l-54.76 32.86zM141.84 243.62v-54.75l54.76-32.86v52.4l-54.76 35.21z" fill="#438bad"/>
+        <path d="M87.08 156.01v52.4l54.76 35.21v-54.75l-54.76-32.86zM32.32 296.02l54.76 35.22v-54.76l-54.76-32.86v52.4z" fill="#69a2bd"/>
+        <path d="M196.6 276.48v54.76l54.75-35.22v-52.4l-54.75 32.86z" fill="#438bad"/>
+        <path d="M141.84 296.02l54.76 35.22v-54.76l-54.76-32.86v52.4z" fill="#69a2bd"/>
+        <g class="cls-2">
+          <g clip-path="url(#clip-path-3)" opacity=".6">
+            <path d="M72.1 129.88l-36.05 21.63L0 129.88l36.05-23.18 36.05 23.18z" fill="#8eb9ce"/>
+            <path d="M36.05 187.56v-36.05l36.05-21.63v34.5l-36.05 23.18z" fill="#438bad"/>
+            <path d="M0 129.88v34.5l36.05 23.18v-36.05L0 129.88z" fill="#69a2bd"/>
+          </g>
+          <g clip-path="url(#clip-path-4)">
+            <path d="M109.77 65.28L91.22 76.41 72.68 65.28l18.54-11.93 18.55 11.93z" fill="#8eb9ce"/>
+            <path d="M91.22 94.95V76.41l18.55-11.13v17.74L91.22 94.95z" fill="#438bad"/>
+            <path d="M72.68 65.28v17.74l18.54 11.93V76.41L72.68 65.28z" fill="#69a2bd"/>
+          </g>
+          <g clip-path="url(#clip-path-5)">
+            <path d="M87.09 11.93L68.55 23.05 50 11.93 68.55 0l18.54 11.93z" fill="#8eb9ce"/>
+            <path d="M68.55 41.6V23.05l18.54-11.12v17.74L68.55 41.6z" fill="#438bad"/>
+            <path d="M50 11.93v17.74L68.55 41.6V23.05L50 11.93z" fill="#69a2bd"/>
+          </g>
+        </g>
+      </g>
+    </g>
+  </symbol>
 </svg>
