--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -22,20 +22,42 @@
         </div>
         <div class="col-12">
           <div class="row mt-5">
-            <div class="col-12 col-md-6 info-card">
-              <div class="info-card-body p-3">
-                <h5>OPEN ST</h5>
-                <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
-                <a href="" class="white-paper-link">WHITE PAPER</a>
-                <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+            <div class="col-12 col-md-6 info-card d-flex">
+              <div class="info-card-body p-3 d-flex flex-column">
+                <div style="flex: 1 1 auto;">
+                  <div class="d-flex align-items-center">
+                    <svg width="35" height="35">
+                      <switch>
+                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-open-st-logo"></use>
+                      </switch>
+                    </svg>
+                    <h5>OPEN ST</h5>
+                  </div>
+                  <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
+                </div>
+                <div>
+                  <a href="" class="white-paper-link">WHITE PAPER</a>
+                  <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+                </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 info-card mt-5 mt-md-0">
-              <div class="info-card-body p-3">
-                <h5>MOSAIC</h5>
-                <p>OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
-                <a href="" class="white-paper-link">WHITE PAPER</a>
-                <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+            <div class="col-12 col-md-6 info-card d-flex mt-5 mt-md-0">
+              <div class="info-card-body p-3 d-flex flex-column">
+                <div style="flex: 1 1 auto;">
+                  <div class="d-flex align-items-center">
+                    <svg width="35" height="35">
+                      <switch>
+                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-mosaic-logo"></use>
+                      </switch>
+                    </svg>
+                    <h5>MOSAIC</h5>
+                  </div>
+                  <p style="flex: 1 1 auto;">OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
+                </div>
+                <div>
+                  <a href="" class="white-paper-link">WHITE PAPER</a>
+                  <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+                </div>
               </div>
             </div>
           </div>
