--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -29,9 +29,9 @@
         <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
           <div class="container-1 rounded p-4 d-flex flex-column">
             <div style="flex: 1 1 auto">
-              <svg class="d-block" width="141" height="27">
+              <svg class="d-block" width="110" height="28">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-api-sdk-logo"></use>
                 </switch>
               </svg>
               <p class="my-2">OST KIT gives you all the tools you need to run your blockchain-powered economy on open scalable sidechains. No need to go through an ICO: Launch your own Branded Token within minutes.</p>
@@ -44,9 +44,9 @@
         <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
           <div class="container-1 rounded p-4 d-flex flex-column">
             <div style="flex: 1 1 auto">
-              <svg class="d-block" width="141" height="27">
+              <svg class="d-block" width="110" height="28">
                 <switch>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-view-brand-nav-menu"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-guides-logo"></use>
                 </switch>
               </svg>
               <p class="my-2">View and analyze transactions across the OpenST side blockchains. Get a macro view of the entire OpenST ecosystem. Zoom in to view transactions within a particular OST powered digitial community.</p>
