minor css changes

--- a/app/assets/stylesheets/web/ost/index/NewsCarousel.scss
+++ b/app/assets/stylesheets/web/ost/index/NewsCarousel.scss
@@ -22,7 +22,7 @@
   @media(max-width: 736px){
     overflow: hidden;
   }
-  background-image: linear-gradient(to bottom, #ffffff, #f4f8f9);
+  background-image: linear-gradient(to top, #ffffff, #f4f8f9);
 
   .content-wrapper {
 
