--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -1,4 +1,4 @@
-<section class="container container-ost-team">
+<section class="container container-ost-team my-5">
   <div class="row align-items-center h-100">
     <div class="col-12 col-sm-6 p-sm-0">
       <div class="row">
