blockchain infra alignment

--- a/app/views/web/ost/index/_ost_kit.erb
+++ b/app/views/web/ost/index/_ost_kit.erb
@@ -1,6 +1,6 @@
 <section class="container-fluid container-powered position-relative ost pt-5">
   <div class="row align-items-center">
-    <div class="col col-lg-5 col-xl-4 mx-auto">
+    <div class="col col-lg-5 col-xl-4 ml-xl-auto mr-xl-6 pl-xl-1 mx-auto">
       <svg class="svg ost-kit-logo mb-2">
         <switch>
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-ost-kit"></use>
@@ -14,7 +14,7 @@
         <a href="" class="btn btn-secondary mt-3 mt-xl-0 ml-xl-3" title="Check Our API's">Check Our API's</a>
       </div>
     </div>
-    <div class="col-sm-12 col-md-6 p-md-0 d-none d-md-block">
+    <div class="col col-lg-6 col-xl-6 p-md-0 d-none d-md-block">
       <img class="img-fluid responsively-lazy"
            src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png"
            alt="OST - Blockchain Toolkit"
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="row container-powered-containers">
-    <div class="col col-lg-10 col-xl-8 mx-md-auto">
+    <div class="col col-lg-10 col-xl-9 mx-md-auto">
       <div class="row">
         <div class="col-sm-12 col-md-4 d-flex my-3 my-md-5">
           <div class="container-1 rounded p-4 d-flex flex-column">
