--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -2,7 +2,7 @@
   <div class="row back-angled-edge">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-sm-12 col-md-6 p-md-0">
+        <div class="col-sm-12 col-md-6">
           <h2>Blockchain Infrastructure</h2>
           <p>
             The OpenST Infrastructure enables scalable token economies. OST leads development on the OpenSt Protocol, a framework for building highly scalable blockchain toekn econimies and also OpenST Mosaic, a layer-2 scaling solution for finalizing many thousands of transactions per second asynchronously on Ethereum at signifiacntly lower gas prices. All OpenST releases are provided via open source license for anyone to use and to build and improve on.
@@ -20,45 +20,43 @@
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
             />
         </div>
-        <div class="col-12">
-          <div class="row mt-5">
-            <div class="col-12 col-md-6 info-card d-flex">
-              <div class="info-card-body p-3 d-flex flex-column">
-                <div style="flex: 1 1 auto;">
-                  <div class="d-flex align-items-center">
-                    <svg width="35" height="35">
-                      <switch>
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-open-st-logo"></use>
-                      </switch>
-                    </svg>
-                    <h5>OPEN ST</h5>
-                  </div>
-                  <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
-                </div>
-                <div>
-                  <a href="" class="white-paper-link">WHITE PAPER</a>
-                  <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
-                </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-12 col-md-6 info-card d-flex">
+          <div class="info-card-body p-3 d-flex flex-column">
+            <div style="flex: 1 1 auto;">
+              <div class="d-flex align-items-center">
+                <svg width="35" height="35">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-open-st-logo"></use>
+                  </switch>
+                </svg>
+                <h5>OPEN ST</h5>
               </div>
+              <p>The OpenST protocol enables the creation of utility tokens on a utility blockchain while the value of those tokens is backed by staked crypto-assets on a value blockchain The OpenST Protocol establishes a bridge between the Ethereum value blockchain and a number of utility blockchains. </p>
             </div>
-            <div class="col-12 col-md-6 info-card d-flex mt-5 mt-md-0">
-              <div class="info-card-body p-3 d-flex flex-column">
-                <div style="flex: 1 1 auto;">
-                  <div class="d-flex align-items-center">
-                    <svg width="35" height="35">
-                      <switch>
-                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-mosaic-logo"></use>
-                      </switch>
-                    </svg>
-                    <h5>MOSAIC</h5>
-                  </div>
-                  <p style="flex: 1 1 auto;">OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
-                </div>
-                <div>
-                  <a href="" class="white-paper-link">WHITE PAPER</a>
-                  <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
-                </div>
+            <div>
+              <a href="" class="white-paper-link">WHITE PAPER</a>
+              <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 info-card d-flex mt-5 mt-md-0">
+          <div class="info-card-body p-3 d-flex flex-column">
+            <div style="flex: 1 1 auto;">
+              <div class="d-flex align-items-center">
+                <svg width="35" height="35">
+                  <switch>
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ost-block-chain-infra-mosaic-logo"></use>
+                  </switch>
+                </svg>
+                <h5>MOSAIC</h5>
               </div>
+              <p style="flex: 1 1 auto;">OpenST Mosaic is an overlay-consensus engine that adds transaction throughput capacity to Ethereum by leveraging Proof-of-Work to secure a large number of utility blockchains. OpenST Mosaic introduces 2nd-layer consensus rules for open validators that provide economic finality for the transactions executed on OpenST utility chains. </p>
+            </div>
+            <div>
+              <a href="" class="white-paper-link">WHITE PAPER</a>
+              <a href="" class="pl-2 github-link"><span>GITHUB</span></a>
             </div>
           </div>
         </div>
