Team members on home page grid fetched from CMS

--- a/app/views/web/ost/index/_ost_team.erb
+++ b/app/views/web/ost/index/_ost_team.erb
@@ -12,70 +12,32 @@
       </div>
     </div>
     <div class="col-12 col-sm-6 p-md-0">
-<!--      <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg" -->
-<!--        class="img-fluid responsively-lazy"-->
-<!--        data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-team.jpg"-->
-<!--        srcset="<%#= raw GlobalConstant::Base.placeholder_image_src %>"-->
-<!--      />-->
-
-<!--      <h1>Packery Chessboard photo grid</h1>-->
-
       <div class="grid">
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?lion');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?tiger');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?dog');"></div>
-        <div class="grid-item grid-item--large" style="background-image: url('https://source.unsplash.com/200x200?cat');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?monkey');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?fish');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?pig');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?zebra');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?horse');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?cow');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?bird');"></div>
-        <div class="grid-item" style="background-image: url('https://sourcet.unsplash.com/200x200?whale');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?hippo');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?snake');"></div>
-        <div class="grid-item grid-item--large" style="background-image: url('https://source.unsplash.com/200x200?crow');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?sparrow');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?owl');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?eagle');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?buffalo');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?crab');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?octopus');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?grasshopper');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?camel');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?elephant');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?goose');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?rat');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?fox');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?deer');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?bear');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?shark');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?bat');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?beaver');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?blackbuck');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?catfish');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?starfish');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?duck');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?peacock');"></div>
-        <div class="grid-item grid-item--large" style="background-image: url('https://source.unsplash.com/200x200?raven');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?wolf');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?dove');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?dragon');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?penguin');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?rabbit');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?tortoise');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?flamingo');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?giraffe');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?goose');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?gull');"></div>
-        <div class="grid-item" style="background-image: url('https://source.unsplash.com/200x200?hawk');"></div>
-        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?panda');"></div>
-        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?cheeta');"></div>
-        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?panther');"></div>
-        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?hyena');"></div>
-        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?jaguar');"></div>
-        <div class="grid-item grid-item--edge" style="background-image: url('https://source.unsplash.com/200x200?lemur');"></div>
+        <%
+          # Team members in excess of max available slots are picked up in a random way. See HTML comment rendered for calculation
+          # large_1, large_2 and large_3 is used for initial grid-item--large classes
+          # Last 6 items are excluded using a grid-item--large class to that boxes should always result in a square
+
+          max_slots = 55
+          members_team_response = (@dynamic_content_team.data[GlobalConstant::StaticContentFileName.ost_members_team]['api_response'] || []) rescue []
+          extra_slots = members_team_response.length - max_slots
+          first_group = members_team_response.first(max_slots - extra_slots)
+          second_group = members_team_response.last(extra_slots * 2).sample(extra_slots)
+          members_team_display = first_group + second_group
+          large_1 = rand(0..16)
+          large_2 = rand(17..32)
+          large_3 = rand(33..48)
+        %>
+        <!--
+        Max slots: <%= max_slots %>
+        Total team members: <%= members_team_response.length %>
+        Randomized team members: <%= extra_slots * 2 %>
+        -->
+        <%
+          members_team_display.each_with_index do|member, index|
+        %>
+        <div class="grid-item <%= index === large_1 || index === large_2 || index === large_3  ? 'grid-item--large' : '' %><%= index > 48  ? 'grid-item--edge' : '' %>" style="background-image: url('<%=raw(member['members_list_image']) %>');"></div>
+        <% end %>
       </div>
 
     </div>
