--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -15,7 +15,7 @@
         <div class="col-sm-12 col-md-6">
           <img class="img-fluid responsively-lazy"
                src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png"
-               alt="OST - Blockchain Toolkit"
+               alt="OST - Blockchain Infrastructure"
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
             />
