--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,16 +1,23 @@
 <section class="container-fluid container-partners py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-lg-6">
-        <h2 class="header-blue-900">OST Partners</h2>
-        <p>
-          Billions of App Actions
-          Connecting Hundreds Of Millions Of Users
-        </p>
-        <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST partners">MEET OST PARTNERS</a>
-        <a href="" class="btn btn-secondary my-2 ml-md-3" title="Discover POCs">DISCOVER POCS</a>
-      </div>
-      <div class="col-md-12 col-lg-6">
+  <div class="row">
+    <div class="col col-lg-10 col-xl-9 mx-md-auto">
+      <div class="row">
+        <div class="col-md-12 col-lg-6">
+          <h2 class="header-blue-900">OST Partners</h2>
+          <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
+          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST partners">MEET OST PARTNERS</a>
+          <a href="" class="btn btn-secondary my-2 ml-md-3" title="Discover POCs">DISCOVER POCS</a>
+        </div>
+        <div class="col-md-12 col-lg-4 mx-auto">
+          <img class="img-fluid responsively-lazy"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
+               alt="OST - Partners"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
+               srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+            />
+          <p
+           class="mt-3 text-center">OST Partner Reach<br/><span class="font-weight-bold">300 + Million User and counting</span></p>
+        </div>
       </div>
     </div>
   </div>
