--- a/app/views/web/ost/index.html.erb
+++ b/app/views/web/ost/index.html.erb
@@ -6,8 +6,18 @@
 <%= render :partial => "/web/ost/index/events_carousel" %>
 <%= render :partial => "/web/ost/index/news_carousel" %>
 <%= render :partial => "/web/ost/index/blockchain_infra" %>
+<section style="height: 50px">
+  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
+    <polygon points="0,0 100,0 100,100"/>
+  </svg>
+</section>
 <%= render :partial => "/web/ost/index/ost_kit" %>
 <%= render :partial => "/web/ost/index/partners" %>
+<section style="height: 50px;background-color: #FFFFFF">
+  <svg viewBox="0 0 100 100" preserveAspectRatio="none" fill="#34445b" style="height: 50px;width: 100%;">
+    <polygon points="0,0 100,100 0,100"/>
+  </svg>
+</section>
 <%= render :partial => "/web/ost/index/liquidity_token_exchange"%>
 <%= render :partial => "/web/ost/index/liquidity_token_exchange_mobile"%>
 <%= render :partial => "/web/ost/index/roadmap" %>
