--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -1,5 +1,5 @@
-<section class="container-fluid block-container py-5 mb-5 position-relative" id="blockchain-infra">
-  <div class="row back-angled-edge">
+<section class="container-fluid block-container py-5" id="blockchain-infra">
+  <div class="row">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-sm-12 col-md-6">
