--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -23,7 +23,10 @@
             </div>
             <span class="align-middle"></span>
           </div>
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-2x.png 1000w" class="img-fluid position-relative" alt="Simple Token Play Video"/>
+          <img
+            class="img-fluid position-relative" alt="OST Jumbotron"
+            src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-jumbotron-illustration@2x.png" />
+          <p class="mt-2">Introducing of OpenST Mosaic Protocol</p>
         </div>
       </div>
 
