--- a/app/views/web/ost/index/_liquidity_token_exchange.erb
+++ b/app/views/web/ost/index/_liquidity_token_exchange.erb
@@ -1,16 +1,21 @@
 <section class="container-fluid liquidity-container-wrapper d-none d-md-block">
- <div class="row ">
+  <div class="row ">
    <div class="container">
-     <div class="row py-5">
-       <div class="col-md-7">
-
+     <div class="row pb-5">
+       <div class="col-md-4 mx-auto">
+         <img class="img-fluid responsively-lazy"
+              src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange@2x.png"
+              alt="OST - Liquidity Branded Token"
+              data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-liquidity-branded-token-exchange@2x.png"
+              srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
+           />
        </div>
-       <div class="col-md-5 my-auto">
+       <div class="col-md-6 my-auto">
          <h3 class="white-header">Liquidity Branded Token Exchange  </h3>
          <p class="mt-4">OST Branded Token Exchange "BTEX" will facilitate easy exchange of BT for other currencies. For providing fast liquidity OST will will serve as the market maker intially with other market makers joining in time.</p>
          <button class="btn btn-primary mt-3" title="Read More">Read More</button>
        </div>
      </div>
    </div>
- </div>
+  </div>
 </section>
