--- a/app/views/web/ost/index/_events_carousel.erb
+++ b/app/views/web/ost/index/_events_carousel.erb
@@ -12,7 +12,7 @@
     if ost_event_filtered.present?
 %>
 
-  <section class="container-fluid container-upcoming-events py-5">
+  <section class="container-fluid container-upcoming-events pb-5">
   <div class="row">
     <div class="container">
       <div style="min-height: 80px;">
