--- a/app/assets/stylesheets/web/ost/index/OstTeam.scss
+++ b/app/assets/stylesheets/web/ost/index/OstTeam.scss
@@ -26,7 +26,7 @@
 
 .grid-item {
   float: left;
-  width: 50px;
+  width: 12.5%;
   height: 50px;
   background-repeat:no-repeat;
   background-size:cover;
@@ -34,6 +34,6 @@
 }
 
 .grid-item--large{
-  width: 100px;
+  width: 25%;
   height: 100px;
 }
