Responsiveness fix CSS in team grid

--- a/app/assets/stylesheets/web/ost/index/OstTeam.scss
+++ b/app/assets/stylesheets/web/ost/index/OstTeam.scss
@@ -30,6 +30,7 @@
   height: 50px;
   background-repeat:no-repeat;
   background-size:cover;
+  background-position: center;
   border: 2px solid white;
 }
 
