--- a/app/views/web/ost/index/_blockchain_infra.erb
+++ b/app/views/web/ost/index/_blockchain_infra.erb
@@ -12,11 +12,11 @@
             <a href="" class="btn btn-secondary openst-forum my-2 my-md-3 ml-xl-3 " title="OPEN ST FORUM">OPEN ST FORUM</a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-5 col-lg-4 col-xl-3 mx-auto d-none d-md-block">
           <img class="img-fluid responsively-lazy"
-               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png"
+               src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-blockchain-infrastructure@3x.png"
                alt="OST - Blockchain Infrastructure"
-               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-blockchain-toolkit-image-v2.png"
+               data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-home-blockchain-infrastructure@3x.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
             />
         </div>
