--- a/app/views/web/ost/index/_news_carousel.erb
+++ b/app/views/web/ost/index/_news_carousel.erb
@@ -28,7 +28,7 @@
 
       <div class="d-flex justify-content-center row pb-4">
         <a href="#subscribe" style="width:271px;" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Signup for updates">Signup for updates</a>
-        <a href="/events" class="btn btn-secondary my-2 my-md-3 ml-xl-3" title="See all news and events">See all news and events</a>
+        <a href="/events" class="btn btn-secondary my-2 my-md-3 ml-md-3" title="See all news and events">See all news and events</a>
       </div>
 
     </div>
