--- a/app/views/web/ost/index/_partners.erb
+++ b/app/views/web/ost/index/_partners.erb
@@ -1,12 +1,38 @@
 <section class="container-fluid container-partners py-5">
   <div class="row">
     <div class="col col-lg-10 col-xl-9 mx-md-auto">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-12 col-lg-6">
           <h2 class="header-blue-900">OST Partners</h2>
           <p>Billions of App Actions<br/>Connecting Hundreds Of Millions Of Users</p>
-          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST partners">MEET OST PARTNERS</a>
-          <a href="" class="btn btn-secondary my-2 ml-md-3" title="Discover POCs">DISCOVER POCS</a>
+          <div class="row partners-companies">
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-gushcloud-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-unsplash-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-metaps-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-animoca-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-passkit-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-lgbt-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-wooshi-icon"></span>
+            </div>
+            <div class="col-6 col-md-4 col-xl-3 my-3">
+              <span class="partners-floship-icon"></span>
+            </div>
+          </div>
+          <a href="/partners" class="btn btn-primary my-2 my-md-3" title="Meet OST Partners">MEET OST PARTNERS</a>
+          <a href="" class="btn btn-secondary my-2 ml-md-3" title="Discover POCS">DISCOVER POCS</a>
         </div>
         <div class="col-md-12 col-lg-4 mx-auto">
           <img class="img-fluid responsively-lazy"
@@ -15,8 +41,7 @@
                data-srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-partners-illustration.png"
                srcset="<%= raw GlobalConstant::Base.placeholder_image_src %>"
             />
-          <p
-           class="mt-3 text-center">OST Partner Reach<br/><span class="font-weight-bold">300 + Million User and counting</span></p>
+          <p class="mt-3 text-center">OST Partner Reach<br/><span class="font-weight-bold">300 + Million User and counting</span></p>
         </div>
       </div>
     </div>
